k8s-deployments/amphipod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amphipod
spec:
  selector:
    matchLabels:
      run: amphipod
  template:
    metadata:
      labels:
        run: amphipod
    spec:
      containers:
      - name: amphipod
        image: aoc2021/amphipod
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: amphipod
  labels:
    run: amphipod
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: amphipod
