k8s-deployments/arithmetic-logic-unit.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arithmetic-logic-unit
spec:
  selector:
    matchLabels:
      run: arithmetic-logic-unit
  template:
    metadata:
      labels:
        run: arithmetic-logic-unit
    spec:
      containers:
      - name: arithmetic-logic-unit
        image: aoc2021/arithmetic-logic-unit
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: arithmetic-logic-unit
  labels:
    run: arithmetic-logic-unit
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: arithmetic-logic-unit
