k8s-deployments/beacon-scanner.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beacon-scanner
spec:
  selector:
    matchLabels:
      run: beacon-scanner
  template:
    metadata:
      labels:
        run: beacon-scanner
    spec:
      containers:
      - name: beacon-scanner
        image: aoc2021/beacon-scanner
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: beacon-scanner
  labels:
    run: beacon-scanner
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: beacon-scanner
