k8s-deployments/dirac-dice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dirac-dice
spec:
  selector:
    matchLabels:
      run: dirac-dice
  template:
    metadata:
      labels:
        run: dirac-dice
    spec:
      containers:
      - name: dirac-dice
        image: aoc2021/dirac-dice
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: dirac-dice
  labels:
    run: dirac-dice
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: dirac-dice
