k8s-deployments/dumbo-octopus.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dumbo-octopus
spec:
  selector:
    matchLabels:
      run: dumbo-octopus
  template:
    metadata:
      labels:
        run: dumbo-octopus
    spec:
      containers:
      - name: dumbo-octopus
        image: aoc2021/dumbo-octopus
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: dumbo-octopus
  labels:
    run: dumbo-octopus
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: dumbo-octopus
