k8s-deployments/foo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo
spec:
  selector:
    matchLabels:
      run: foo
  template:
    metadata:
      labels:
        run: foo
    spec:
      containers:
      - name: foo
        image: aoc2021/foo
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: foo
  labels:
    run: foo
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: foo
