k8s-deployments/sea-cucumber.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sea-cucumber
spec:
  selector:
    matchLabels:
      run: sea-cucumber
  template:
    metadata:
      labels:
        run: sea-cucumber
    spec:
      containers:
      - name: sea-cucumber
        image: aoc2021/sea-cucumber
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: sea-cucumber
  labels:
    run: sea-cucumber
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: sea-cucumber
