k8s-deployments/smoke-basin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smoke-basin
spec:
  selector:
    matchLabels:
      run: smoke-basin
  template:
    metadata:
      labels:
        run: smoke-basin
    spec:
      containers:
      - name: smoke-basin
        image: aoc2021/smoke-basin
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: smoke-basin
  labels:
    run: smoke-basin
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: smoke-basin
