k8s-deployments/snailfish.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snailfish
spec:
  selector:
    matchLabels:
      run: snailfish
  template:
    metadata:
      labels:
        run: snailfish
    spec:
      containers:
      - name: snailfish
        image: aoc2021/snailfish
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: snailfish
  labels:
    run: snailfish
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: snailfish
