k8s-deployments/trench-map.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trench-map
spec:
  selector:
    matchLabels:
      run: trench-map
  template:
    metadata:
      labels:
        run: trench-map
    spec:
      containers:
      - name: trench-map
        image: aoc2021/trench-map
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: trench-map
  labels:
    run: trench-map
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: trench-map
