k8s-deployments/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aoc2021-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          # Dummy service
          - path: /foo
            pathType: Prefix
            backend:
              service:
                name: foo
                port:
                  number: 8080
          - path: /sonar-sweep(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: sonar-sweep
                port:
                  number: 8080
          - path: /dive(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: dive
                port:
                  number: 8080
          - path: /binary-diagnostic(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: binary-diagnostic
                port:
                  number: 8080
          # Add more...
